--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
 	<title>Portfolio Demo</title>
 </head>
 <body>
-	<header>
-		<h1>
-			<a href="index.html">
+	<header class="main-header">
+		<h1 class="wordmark">
+			<a class="header-link" href="index.html">
 				Lee Hall
 			</a>
 		</h1>
-		<nav>
-			<ul>
-				<li>
-					<a href="portfolio.html">
+		<nav class="main-nav">
+			<ul class="main-nav-list">
+				<li class="main-nav-item">
+					<a class="header-link main-nav-link" href="portfolio.html">
 						Portfolio
 					</a>
 				</li>
-				<li>
-					<a href="about.html">
+				<li class="main-nav-item">
+					<a class="header-link main-nav-link" href="about.html">
 						About
 					</a>
 				</li>
-				<li>
-					<a href="contact.html">
+				<li class="main-nav-item">
+					<a class="header-link main-nav-link" href="contact.html">
 						Contact
 					</a>
 				</li>
@@ -34,20 +34,24 @@
 		</nav>
 	</header>
 
-	<main>
+	<main class="container">
 		<img src="assets/images/home.jpeg" alt="Cotton candy clouds during a sunset">
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, veniam minima natus odit optio alias nisi repellendus eius nulla. Quidem explicabo cupiditate saepe quas nesciunt pariatur magnam, reiciendis minima ratione!</p>
-		<p>Cum dolorum deleniti dolorem pariatur dicta, libero voluptatum earum repellat minus eius alias, ad, aliquam illo laudantium quae rerum cumque architecto excepturi consequatur sint! Quo esse pariatur ad, fuga voluptate.</p>
-		<p>Aut, possimus ex. Id quas dicta cum, amet facilis. Provident assumenda totam adipisci optio placeat, vel dolor tempora, non earum aliquid dignissimos quam sapiente quo aspernatur excepturi sed voluptatem praesentium.</p>
+		<section class="user-content">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis, veniam minima natus odit optio alias nisi repellendus eius nulla. Quidem explicabo cupiditate saepe quas nesciunt pariatur magnam, reiciendis minima ratione!</p>
+			<p>Cum dolorum deleniti dolorem pariatur dicta, libero voluptatum earum repellat minus eius alias, ad, aliquam illo laudantium quae rerum cumque architecto excepturi consequatur sint! Quo esse pariatur ad, fuga voluptate.</p>
+			<p>Aut, possimus ex. Id quas dicta cum, amet facilis. Provident assumenda totam adipisci optio placeat, vel dolor tempora, non earum aliquid dignissimos quam sapiente quo aspernatur excepturi sed voluptatem praesentium.</p>
+		</section>
 	</main>
 
-	<footer>
-		<p>
-			<small>
-				Copyright &copy; 2019 Lee Hall. All rights reserved.
-			</small>
-		</p>
+	<footer class="main-footer">
+		<div class="container">
+			<p>
+				<small>
+					Copyright &copy; 2019 Lee Hall. All rights reserved.
+				</small>
+			</p>
+		</div>
 	</footer>
 </body>
 </html>
